# pygrowup2

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pygrowup/: __init__.py  pygrowup.py  tests.py
pygrowup2/: exceptions.py  pygrowup.py  tests.py
pygrowup2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygrowup2/tables/by_month/src/: munge_data.py
